clients > fix client section on mobile

--- a/wp-content/themes/cloudappers_theme/css/custom/default-style.css
+++ b/wp-content/themes/cloudappers_theme/css/custom/default-style.css
@@ -5211,7 +5211,7 @@ section.page-not-found #particles-js {
     }
 
     /* Client section */
-    .clients .item:nth-child(n+8) {
+    .page-template-about .clients .item:nth-child(n+8) {
         display: none;
     }
 
